{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 62,
  "lineage": "8ab0a914-3859-49d8-b2f6-25edf706c242",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-09T20:33:00.957-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/rosy-resolver-465404-b2/global/firewalls/news-vpc-allow-http",
            "log_config": [],
            "name": "news-vpc-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/rosy-resolver-465404-b2/global/networks/news-vpc",
            "priority": 1000,
            "project": "rosy-resolver-465404-b2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rosy-resolver-465404-b2/global/firewalls/news-vpc-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-07-09T20:33:00.408-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/rosy-resolver-465404-b2/global/firewalls/news-vpc-allow-internal",
            "log_config": [],
            "name": "news-vpc-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/rosy-resolver-465404-b2/global/networks/news-vpc",
            "priority": 1000,
            "project": "rosy-resolver-465404-b2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rosy-resolver-465404-b2/global/firewalls/news-vpc-allow-internal",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/rosy-resolver-465404-b2/global/networks/news-vpc",
            "mtu": 0,
            "name": "news-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4349937717904313018",
            "project": "rosy-resolver-465404-b2",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rosy-resolver-465404-b2/global/networks/news-vpc"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-09T20:33:01.321-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/rosy-resolver-465404-b2/regions/us-central1/subnetworks/news-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "news-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/rosy-resolver-465404-b2/global/networks/news-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "rosy-resolver-465404-b2",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.10.0.0/16",
                "range_name": "gke-pods-range"
              },
              {
                "ip_cidr_range": "10.20.0.0/16",
                "range_name": "gke-services-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/rosy-resolver-465404-b2/regions/us-central1/subnetworks/news-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}